--- a/fuckshadows-csharp/fuckshadows-csharp.csproj
+++ b/fuckshadows-csharp/fuckshadows-csharp.csproj
@@ -123,6 +123,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Service\IService.cs" />
+    <Compile Include="Controller\Service\Listener.Service.cs" />
+    <Compile Include="Controller\Service\ServiceUserToken.cs" />
     <Compile Include="Controller\System\Hotkeys\HotkeyCallbacks.cs" />
     <Compile Include="Encryption\AEAD\AEADEncryptor.cs" />
     <Compile Include="Encryption\AEAD\AEADMbedTLSEncryptor.cs" />
@@ -176,7 +179,12 @@
     <Compile Include="Util\ProcessManagement\Job.cs" />
     <Compile Include="Util\ProcessManagement\ThreadUtil.cs" />
     <Compile Include="Encryption\RNG.cs" />
+    <Compile Include="Util\Sockets\SaeaAwaitable.cs" />
+    <Compile Include="Util\Sockets\SaeaAwaiter.cs" />
+    <Compile Include="Util\Sockets\SocketExtensions.cs" />
+    <Compile Include="Util\Sockets\SaeaAwaitablePool.cs" />
     <Compile Include="Util\Sockets\SocketUtil.cs" />
+    <Compile Include="Util\Sockets\TplExtensions.cs" />
     <Compile Include="Util\SystemProxy\ProxyException.cs" />
     <Compile Include="Util\SystemProxy\Sysproxy.cs" />
     <Compile Include="Util\Util.cs" />
