--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,11 @@ matrix:
 nuget:
   project_feed: true
 before_build:
-- cmd: nuget restore
+- cmd: >-
+    nuget restore
+
+    install-devpack.cmd
+
 build:
   parallel: true
   verbosity: normal
