--- a/fuckshadows-csharp/fuckshadows-csharp.csproj
+++ b/fuckshadows-csharp/fuckshadows-csharp.csproj
@@ -110,7 +110,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Net" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -176,6 +175,7 @@
     <Compile Include="Util\ProcessManagement\Job.cs" />
     <Compile Include="Util\ProcessManagement\ThreadUtil.cs" />
     <Compile Include="Encryption\RNG.cs" />
+    <Compile Include="Util\Sockets\ObjectPool.cs" />
     <Compile Include="Util\Sockets\SaeaAwaitable.cs" />
     <Compile Include="Util\Sockets\SaeaAwaitablePoolManager.cs" />
     <Compile Include="Util\Sockets\SaeaAwaiter.cs" />
