--- a/fuckshadows-csharp/fuckshadows-csharp.csproj
+++ b/fuckshadows-csharp/fuckshadows-csharp.csproj
@@ -175,14 +175,12 @@
     <Compile Include="Util\ProcessManagement\Job.cs" />
     <Compile Include="Util\ProcessManagement\ThreadUtil.cs" />
     <Compile Include="Encryption\RNG.cs" />
-    <Compile Include="Util\Sockets\ObjectPool.cs" />
-    <Compile Include="Util\Sockets\SaeaAwaitable.cs" />
-    <Compile Include="Util\Sockets\SaeaAwaitablePoolManager.cs" />
-    <Compile Include="Util\Sockets\SaeaAwaiter.cs" />
-    <Compile Include="Util\Sockets\SocketExtensions.cs" />
-    <Compile Include="Util\Sockets\SaeaAwaitablePool.cs" />
+    <Compile Include="Util\Sockets\Buffer\ISegmentBufferManager.cs" />
+    <Compile Include="Util\Sockets\Buffer\SegmentBufferDeflector.cs" />
+    <Compile Include="Util\Sockets\Buffer\SegmentBufferManager.cs" />
+    <Compile Include="Util\Sockets\Buffer\UnableToAllocateBufferException.cs" />
+    <Compile Include="Util\Sockets\Buffer\UnableToCreateMemoryException .cs" />
     <Compile Include="Util\Sockets\SocketUtil.cs" />
-    <Compile Include="Util\Sockets\TplExtensions.cs" />
     <Compile Include="Util\SystemProxy\ProxyException.cs" />
     <Compile Include="Util\SystemProxy\Sysproxy.cs" />
     <Compile Include="Util\Util.cs" />
