--- a/fuckshadows-csharp/app.config
+++ b/fuckshadows-csharp/app.config
@@ -84,4 +84,13 @@
     <trace autoflush="true"/>
   </system.diagnostics>
   -->
+  <system.net>
+    <settings>
+      <socket
+        alwaysUseCompletionPortsForAccept="true"
+        alwaysUseCompletionPortsForConnect="true"
+        ipProtectionLevel="Unrestricted"
+      />
+    </settings>
+  </system.net>
 </configuration>
